--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
 </head>
 <body>
 
-<p>
-<em>Main Index</em>
-</p>
+<div id="Main Index"><h1 id="Main Index" class="header"><a href="#Main Index">Main Index</a></h1></div>
 
-<div id="General"><h2 id="General" class="header"><a href="#General">General</a></h2></div>
+<div id="Main Index-General"><h2 id="General" class="header"><a href="#Main Index-General">General</a></h2></div>
 <p>
 <a href="linux/bat.html">Battery saver</a>
 <a href="linux/gaming.html">Gaming</a>
 </p>
 
-<div id="Distro"><h2 id="Distro" class="header"><a href="#Distro">Distro</a></h2></div>
+<div id="Main Index-Distro"><h2 id="Distro" class="header"><a href="#Main Index-Distro">Distro</a></h2></div>
 <p>
 <a href="linux/distros/gentoo.html">Gentoo</a>
 </p>
 
-<div id="Ui/Ux"><h2 id="Ui/Ux" class="header"><a href="#Ui/Ux">Ui/Ux</a></h2></div>
+<div id="Private"><h1 id="Private" class="header"><a href="#Private">Private</a></h1></div>
+<div id="Private-Ui/Ux"><h2 id="Ui/Ux" class="header"><a href="#Private-Ui/Ux">Ui/Ux</a></h2></div>
 <p>
 <a href="ui-ux/design-doc.html">Design Doc</a>
 </p>
