proper text hirerachy

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <a href="linux/distros/gentoo.html">Gentoo</a>
 </p>
 
-<div id="Private"><h1 id="Private" class="header"><a href="#Private">Private</a></h1></div>
-<div id="Private-Ui/Ux"><h2 id="Ui/Ux" class="header"><a href="#Private-Ui/Ux">Ui/Ux</a></h2></div>
+<div id="Main Index-Distro-Private"><h3 id="Private" class="header"><a href="#Main Index-Distro-Private">Private</a></h3></div>
+<div id="Main Index-Ui/Ux"><h2 id="Ui/Ux" class="header"><a href="#Main Index-Ui/Ux">Ui/Ux</a></h2></div>
 <p>
 <a href="ui-ux/design-doc.html">Design Doc</a>
 </p>
