--- a/linux/gaming.html
+++ b/linux/gaming.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div id="Index"><h1 id="Index" class="header"><a href="#Index">Index</a></h1></div>
+<div id="Table of contents"><h2 id="Table of contents" class="header"><a href="#Table of contents">Table of contents</a></h2></div>
 <p>
 <a href="gaming.html#General">#General</a>
 <a href="gaming.html#Steam">#Steam</a>
@@ -19,28 +19,28 @@
 
 </ul>
 
-<div id="Index-General"><h3 id="General" class="header"><a href="#Index-General">General</a></h3></div>
+<div id="Table of contents-General"><h3 id="General" class="header"><a href="#Table of contents-General">General</a></h3></div>
 <ul>
 <li>
 Make sure picom/compton (any compositors) should be killed, before playing. As the will introduce input lags.
 
 <li>
-For nvidia gpus pass <em><span id="Index-General-prime-run"></span><strong id="prime-run">prime-run</strong></em> as an launch option. This runs the game with <em>dgpu</em>.
+For nvidia gpus pass <em><span id="Table of contents-General-prime-run"></span><strong id="prime-run">prime-run</strong></em> as an launch option. This runs the game with <em>dgpu</em>.
 
 <li>
 For <em>steam</em> games lookup the <a href="gaming.html#Steam">steam section</a>.
 
 </ul>
 
-<div id="Index-Steam"><h3 id="Steam" class="header"><a href="#Index-Steam">Steam</a></h3></div>
-<div id="Index-Steam-Launch options"><h4 id="Launch options" class="header"><a href="#Index-Steam-Launch options">Launch options</a></h4></div>
+<div id="Table of contents-Steam"><h3 id="Steam" class="header"><a href="#Table of contents-Steam">Steam</a></h3></div>
+<div id="Table of contents-Steam-Launch options"><h4 id="Launch options" class="header"><a href="#Table of contents-Steam-Launch options">Launch options</a></h4></div>
 <ul>
 <li>
 <code>vblank_mode=0 prime-run %command%</code>
 
 <ul>
 <li>
-make sure <em><span id="Index-Steam-Launch options-nvidia prime"></span><strong id="nvidia prime">nvidia prime</strong></em> is installed
+make sure <em><span id="Table of contents-Steam-Launch options-nvidia prime"></span><strong id="nvidia prime">nvidia prime</strong></em> is installed
 
 </ul>
 </ul>
