--- a/index.html
+++ b/index.html
@@ -10,22 +10,38 @@
 
 <div id="Main Index"><h1 id="Main Index" class="header"><a href="#Main Index">Main Index</a></h1></div>
 
-<div id="Main Index-General"><h2 id="General" class="header"><a href="#Main Index-General">General</a></h2></div>
-<p>
+<ul>
+<li>
+== General ==
+
+<ul>
+<li>
 <a href="linux/bat.html">Battery saver</a>
+
+<li>
 <a href="linux/gaming.html">Gaming</a>
-</p>
 
-<div id="Main Index-Distro"><h2 id="Distro" class="header"><a href="#Main Index-Distro">Distro</a></h2></div>
-<p>
+</ul>
+<li>
+== Distro ==
+
+<ul>
+<li>
 <a href="linux/distros/gentoo.html">Gentoo</a>
-</p>
 
-<div id="Main Index-Distro-Private"><h6 id="Private" class="header"><a href="#Main Index-Distro-Private">Private</a></h6></div>
-<div id="Main Index-Ui/Ux"><h2 id="Ui/Ux" class="header"><a href="#Main Index-Ui/Ux">Ui/Ux</a></h2></div>
-<p>
+</ul>
+<li>
+<span id="Main Index-Private"></span><strong id="Private">Private</strong>
+
+<li>
+== Ui/Ux ==
+
+<ul>
+<li>
 <a href="ui-ux/design-doc.html">Design Doc</a>
-</p>
+
+</ul>
+</ul>
 
 </body>
 </html>
