--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
 <ul>
 <li>
-== General ==
+<span id="Main Index-Linux"></span><strong id="Linux">Linux</strong>
+
+<ul>
+<li>
+General
 
 <ul>
 <li>
@@ -23,18 +27,21 @@
 
 </ul>
 <li>
-== Distro ==
+Distro
 
 <ul>
 <li>
 <a href="linux/distros/gentoo.html">Gentoo</a>
 
 </ul>
+</ul>
+</ul>
+<p>
+Private
+</p>
+<ul>
 <li>
-<span id="Main Index-Private"></span><strong id="Private">Private</strong>
-
-<li>
-== Ui/Ux ==
+Ui/Ux
 
 <ul>
 <li>
