--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@ Distro
 
 </ul>
 </ul>
-</ul>
-<p>
-Private
-</p>
+<li>
+Private (does not exist)
+
 <ul>
 <li>
 Ui/Ux
@@ -47,6 +46,7 @@ Ui/Ux
 <li>
 <a href="ui-ux/design-doc.html">Design Doc</a>
 
+</ul>
 </ul>
 </ul>
 
