--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Distro
 </ul>
 </ul>
 <li>
-Private (does not exist)
+<span id="Main Index-Private"></span><strong id="Private">Private</strong> (<em>does not exist</em>)
 
 <ul>
 <li>
