--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-layout: default
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <link rel="Stylesheet" type="text/css" href="style.css">
 <title>index</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-</head> -->
+</head>
 <body>
 
 <div id="Main Index"><h1 id="Main Index" class="header"><a href="#Main Index">Main Index</a></h1></div>
@@ -52,4 +51,4 @@ Ui/Ux
 </ul>
 
 </body>
-<!-- </html> -->
+</html>
