organized and added more stuff like personal and more

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
 
 <div id="Main Index"><h1 id="Main Index" class="header"><a href="#Main Index">Main Index</a></h1></div>
-
 <ul>
 <li>
 <span id="Main Index-Linux"></span><strong id="Linux">Linux</strong>
@@ -36,17 +35,20 @@ Distro
 </ul>
 </ul>
 <li>
-<span id="Main Index-Private"></span><strong id="Private">Private</strong> (<em>does not exist</em>)
-
-<ul>
-<li>
-Ui/Ux
+<span id="Main Index-Ui/Ux"></span><strong id="Ui/Ux">Ui/Ux</strong>
 
 <ul>
 <li>
 <a href="ui-ux/design-doc.html">Design Doc</a>
 
 </ul>
+<li>
+<span id="Main Index-Personal"></span><strong id="Personal">Personal</strong>
+
+<ul>
+<li>
+<a href="personal/todo/todo.html">./personal/todo/todo</a>
+
 </ul>
 </ul>
 
