fix a tag thingy

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Distro
 
 <ul>
 <li>
-<a href="personal/todo/todo.html">./personal/todo/todo</a>
+<a href="personal/todo/todo.html">Todo</a>
 
 </ul>
 </ul>
