--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ General
 
 </ul>
 <li>
-Distro
+Distro related
 
 <ul>
 <li>
@@ -48,6 +48,9 @@ Distro
 <ul>
 <li>
 <a href="personal/todo/todo.html">Todo</a>
+
+<li>
+<a href="personal/diary/diary.html">My Diary</a>
 
 </ul>
 </ul>
