--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Distro related
 
 <ul>
 <li>
-<a href="ui-ux/design-doc.html">Design Doc</a>
+<a href="ui-ux/design-doc-closed-source.html">Design Doc(private)</a>
 
 </ul>
 <li>
