--- a/personal/todo/todo.html
+++ b/personal/todo/todo.html
@@ -29,6 +29,17 @@ complete unix assignment 2
 <li class="done0">
 complete dbms assignment 2
 
+<li class="done0">
+complete dbms lab
+
+<ul>
+<li class="done0">
+install mysql
+
+<li class="done0">
+complete observation
+
+</ul>
 </ul>
 
 <div id="Table of contents-To Learn"><h3 id="To Learn" class="header"><a href="#Table of contents-To Learn">To Learn</a></h3></div>
