--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@ Distro related
 
 </ul>
 <li>
+<span id="Main Index-Tutorials"></span><strong id="Tutorials">Tutorials</strong>
+
+<ul>
+<li>
+<a href="tutorials/installation/installation.html">Installing Stuff</a>
+
+</ul>
+<li>
 <span id="Main Index-Personal"></span><strong id="Personal">Personal</strong>
 
 <ul>
