update install instructions for ns2

--- a/index.html
+++ b/index.html
@@ -35,19 +35,22 @@ Distro related
 </ul>
 </ul>
 <li>
-<span id="Main Index-Ui/Ux"></span><strong id="Ui/Ux">Ui/Ux</strong>
-
-<ul>
-<li>
-<a href="ui-ux-private/design-doc-private.html">Design Doc(private)</a>
-
-</ul>
-<li>
 <span id="Main Index-Tutorials"></span><strong id="Tutorials">Tutorials</strong>
 
 <ul>
 <li>
 <a href="tutorials/installation/installation.html">Installing Stuff</a>
+
+<li>
+<a href="tutorials/learn/learn.html">Learn</a>
+
+</ul>
+<li>
+<span id="Main Index-Ui/Ux"></span><strong id="Ui/Ux">Ui/Ux</strong>
+
+<ul>
+<li>
+<a href="ui-ux-private/design-doc-private.html">Design Doc(private)</a>
 
 </ul>
 <li>
