add admin stuff/manage groups

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ General
 <li>
 <a href="linux/gaming.html">Gaming</a>
 
+<li>
+<a href="linux/admin.html">Admin stuff</a>
+
 </ul>
 <li>
 Distro related
