--- a/tutorials/installation/install-ns2.html
+++ b/tutorials/installation/install-ns2.html
@@ -129,7 +129,7 @@ Now to validate your build (i.e) to check wether ns2 is properly
 
 <div id="How to install Network Simulator 2(ns2) in unix based os?-Table of contents-Install-I'm not using debian/debian based distro"><h4 id="I'm not using debian/debian based distro" class="header"><a href="#How to install Network Simulator 2(ns2) in unix based os?-Table of contents-Install-I'm not using debian/debian based distro">I'm not using debian/debian based distro</a></h4></div>
 <p>
-	You my friend is out of luck. If you are able to find <span id="How to install Network Simulator 2(ns2) in unix based os?-Table of contents-Install-I'm not using debian/debian based distro-gcc version 4.8.0"></span><strong id="gcc version 4.8.0">gcc version 4.8.0</strong> and <span id="How to install Network Simulator 2(ns2) in unix based os?-Table of contents-Install-I'm not using debian/debian based distro-lower"></span><strong id="lower">lower</strong>
+	You my friend is out of luck. If you are able to find <span id="How to install Network Simulator 2(ns2) in unix based os?-Table of contents-Install-I'm not using debian/debian based distro-gcc version 4.8.0"></span><strong id="gcc version 4.8.0">gcc version 4.8.0</strong> and <span id="How to install Network Simulator 2(ns2) in unix based os?-Table of contents-Install-I'm not using debian/debian based distro-lower"></span><strong id="lower">lower</strong>,
 try compiling it might work if not. Run a <span id="How to install Network Simulator 2(ns2) in unix based os?-Table of contents-Install-I'm not using debian/debian based distro-kvm/vm"></span><strong id="kvm/vm">kvm/vm</strong> with a debian/debian based distro.
 </p>
 
