--- a/linux/admin.html
+++ b/linux/admin.html
@@ -79,7 +79,9 @@ But there can only be one username.
 <ul>
 <li>
 <span id="Table of contents-Manage user groups-Remove a user from a group-Can remove only one user from one group at a time"></span><strong id="Can remove only one user from one group at a time">Can remove only one user from one group at a time</strong>
-	To remove a user from a group run `gpasswd --delete [username] [group name]
+
+<li>
+To remove a user from a group run <code>gpasswd --delete [username] [group name]</code>
 
 </ul>
 
