--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Distro related
 
 <ul>
 <li>
-<a href="linux/distros/gentoo.html">Gentoo</a>
+<a href="linux/distros/gentoo/gentoo.html">Gentoo</a>
 
 </ul>
 </ul>
