--- a/tutorials/installation/installation.html
+++ b/tutorials/installation/installation.html
@@ -13,6 +13,14 @@
 <li>
 <a href="install-ns2.html">Network Simulator 2(ns2)</a>
 
+<li>
+Linux/Gentoo
+
+<ul>
+<li>
+<a href="../../linux/distros/gentoo/installing-stuff/mysql.html">mysql</a>
+
+</ul>
 </ul>
 
 </body>
