update and fix some typos

--- a/linux/gaming.html
+++ b/linux/gaming.html
@@ -26,10 +26,11 @@
 <div id="Table of contents-General"><h3 id="General" class="header"><a href="#Table of contents-General">General</a></h3></div>
 <ul>
 <li>
-Make sure picom/compton (any compositors) should be killed, before playing. As the will introduce input lags.
+Make sure picom/compton (any compositors) is not running, before playing.
+	  As it will introduce input lags.
 
 <li>
-For nvidia gpus pass <em><span id="Table of contents-General-prime-run"></span><strong id="prime-run">prime-run</strong></em> as an launch option. This runs the game with <em>dgpu</em>.
+For an nvidia gpu pass <em><span id="Table of contents-General-prime-run"></span><strong id="prime-run">prime-run</strong></em> as an launch option. This runs the game with <em>dgpu</em>.
 
 <li>
 For <em>steam</em> games lookup the <a href="gaming.html#Steam">steam section</a>.
