--- a/personal/todo/todo.html
+++ b/personal/todo/todo.html
@@ -23,29 +23,32 @@
 
 <div id="Table of contents-Daily"><h3 id="Daily" class="header"><a href="#Table of contents-Daily">Daily</a></h3></div>
 <ul>
-<li class="done0">
-complete unix assignment 2
-
-<li class="done4">
-complete dbms assignment 2
-
-<li class="done0">
+<li class="done2">
 complete dbms lab
 
 <ul>
-<li class="done0">
+<li class="done4">
 install mysql
 
 <li class="done0">
 complete observation
 
 </ul>
+<li class="done0">
+complete cn assignment 2
+
+<li class="done0">
+complete at assignment 1
+
 </ul>
 
 <div id="Table of contents-To Learn"><h3 id="To Learn" class="header"><a href="#Table of contents-To Learn">To Learn</a></h3></div>
 <ul>
 <li class="done0">
 complete learing the rust book
+
+<li class="done0">
+complete rust creating a text editor tutorial
 
 <li class="done0">
 flutter
@@ -85,6 +88,9 @@ create a package manager for all my
 
 <li class="done0">
 port mywiki script and add features
+
+<li class="done0">
+create a port of yt-dlp
 
 </ul>
 <li>
