--- a/tutorials/installation/installation.html
+++ b/tutorials/installation/installation.html
@@ -14,12 +14,17 @@
 <a href="install-ns2.html">Network Simulator 2(ns2)</a>
 
 <li>
-Linux/Gentoo
+Linux
+
+<ul>
+<li>
+Gentoo
 
 <ul>
 <li>
 <a href="../../linux/distros/gentoo/installing-stuff/mysql.html">mysql</a>
 
+</ul>
 </ul>
 </ul>
 
