--- a/linux/distros/gentoo/installing-stuff/screenkey.html
+++ b/linux/distros/gentoo/installing-stuff/screenkey.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="Stylesheet" type="text/css" href="../../../../style.css">
-<title>installing-stuff</title>
+<title>screenkey</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -11,10 +11,17 @@
 <div id="Table of contents"><h2 id="Table of contents" class="header"><a href="#Table of contents">Table of contents</a></h2></div>
 <ul>
 <li>
-<a href="mysql.html">mysql</a>
+<a href="screenkey.html#Install">#Install</a>
 
+</ul>
+
+<div id="Table of contents-Install"><h3 id="Install" class="header"><a href="#Table of contents-Install">Install</a></h3></div>
+<p>
+	To install Screenkey run <code>emerge screenkey dbus-python</code>
+</p>
+<ul>
 <li>
-<a href="screenkey.html">Screenkey</a>
+You may need to unmask it if required.
 
 </ul>
 
