--- a/personal/todo/todo.html
+++ b/personal/todo/todo.html
@@ -48,9 +48,6 @@ complete at assignment 1
 complete learing the rust book
 
 <li class="done0">
-complete rust creating a text editor tutorial
-
-<li class="done0">
 flutter
 
 </ul>
@@ -92,6 +89,23 @@ port mywiki script and add features
 <li class="done0">
 create a port of yt-dlp
 
+<li class="done0">
+port dirc script
+
+<ul>
+<li class="done0">
+add an recursive mode to loop every single subdir
+
+<li class="done0">
+better formatting
+
+</ul>
+<li class="done0">
+create an alarm clock
+
+<li class="done0">
+complete rust creating a text editor tutorial
+
 </ul>
 <li>
 <span id="Table of contents-To Make-flutter"></span><strong id="flutter">flutter</strong>
@@ -117,6 +131,9 @@ create a client for github
 <ul>
 <li class="done0">
 port ytd to yt-dlp
+
+<li class="done0">
+create an alarm clock
 
 </ul>
 <li>
