--- a/tutorials/installation/installation.html
+++ b/tutorials/installation/installation.html
@@ -24,6 +24,9 @@ Gentoo
 <li>
 <a href="../../linux/distros/gentoo/installing-stuff/mysql.html">mysql</a>
 
+<li>
+<a href="../../linux/distros/gentoo/installing-stuff/screenkey.html">Screenkey</a>
+
 </ul>
 </ul>
 </ul>
