fix time issue gentoo topic

--- a/linux/distros/gentoo/gentoo.html
+++ b/linux/distros/gentoo/gentoo.html
@@ -16,6 +16,9 @@
 <li>
 <a href="installing-stuff/installing-stuff.html">Installing stuff</a>
 
+<li>
+<a href="time-date.html">Time and date</a>
+
 </ul>
 
 </body>
