--- a/linux/distros/gentoo/gentoo.html
+++ b/linux/distros/gentoo/gentoo.html
@@ -17,7 +17,7 @@
 <a href="installing-stuff/installing-stuff.html">Installing stuff</a>
 
 <li>
-<a href="time-date.html">Time and date</a>
+<a href="time-date.html">Time Date stuff</a>
 
 </ul>
 
