--- a/tutorials/installation/installation.html
+++ b/tutorials/installation/installation.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="Stylesheet" type="text/css" href="../../style.css">
+<link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
 <title>installation</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,6 +27,14 @@ Gentoo
 
 <li>
 <a href="../../linux/distros/gentoo/installing-stuff/screenkey.html">Screenkey</a>
+
+</ul>
+<li>
+Arch
+
+<ul>
+<li>
+<a href="../../linux/distros/arch/installing-stuff/tensorflow.html">tensorflow</a>
 
 </ul>
 </ul>
