--- a/linux/distros/arch/installing-stuff/tensorflow.html
+++ b/linux/distros/arch/installing-stuff/tensorflow.html
@@ -15,7 +15,8 @@
 <p>
 	To install Tensorflow run
 </p>
-<pre  sudo pacman -S python-tensorflow-cuda }}}>
+<pre>
+	sudo pacman -S python-tensorflow-cuda
 </pre>
 
 </body>
