--- a/linux/distros/arch/installing-stuff/tensorflow.html
+++ b/linux/distros/arch/installing-stuff/tensorflow.html
@@ -13,11 +13,8 @@
 
 <div id="Install Tensorflow-Install"><h3 id="Install" class="header"><a href="#Install Tensorflow-Install">Install</a></h3></div>
 <p>
-	To install Tensorflow run
+	To install Tensorflow run <code>sudo pacman -S python-tensorflow-cuda</code>
 </p>
-<pre>
-	sudo pacman -S python-tensorflow-cuda
-</pre>
 
 </body>
 </html>
