new tutorial on aws lambda

--- a/tutorials/learn/learn.html
+++ b/tutorials/learn/learn.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="Stylesheet" type="text/css" href="../../style.css">
+<link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
 <title>learn</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +13,9 @@
 <ul>
 <li>
 <a href="ns2/ns2.html">Network Simulator 2(ns2)</a>
+
+<li>
+<a href="aws/lambda.html">AWS Lambda Local</a>
 
 </ul>
 
